Fixed up RigidBodyExplorationConfigurationMessage methods.